--- a/_code/site/_layout.ejs
+++ b/_code/site/_layout.ejs
@@ -8,6 +8,7 @@
     <title>Bootstrap 101 Template</title>
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="styles/styles.css">
     <!--[if lt IE 9]>
       <script src="//oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="//oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
@@ -31,7 +32,7 @@
                 <ul class="nav navbar-nav">
                     <li class="active"><a href="index.html">Home</a>
                     </li>
-                    <li><a href="about.html">About</a>
+                    <li><a href="about.html">About Us</a>
                     </li>
                     <li><a href="contact.html">Contact</a>
                     </li>
