--- a/_code/site/_layout.ejs
+++ b/_code/site/_layout.ejs
@@ -26,21 +26,36 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">Project name</a>
+                <a class="navbar-brand" href="#">CB Logo</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="index.html">Home</a>
+                    <li><a href="index.html">Home</a>
                     </li>
-                    <li><a href="about.html">About Us</a>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Portfolio <span class="caret"></span></a>
+                        <ul class="dropdown-menu" role="menu">
+                            <li><a href="#">All</a>
+                            </li>
+                            <li><a href="#">Branding</a>
+                            </li>
+                            <li><a href="#">Print Design</a>
+                            </li>
+                            <li><a href="#">Stationery</a>
+                            </li>
+                            <li><a href="#">Illustration</a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li><a href="about.html">About</a>
                     </li>
                     <li><a href="contact.html">Contact</a>
                     </li>
                 </ul>
             </div>
         </div>
+        <div class="home-image"></div>
     </div>
-
     <div class="container">
 
         <%-yield %>
