--- a/_code/site/_layout.ejs
+++ b/_code/site/_layout.ejs
@@ -51,10 +51,21 @@
                     </li>
                     <li><a href="contact.html">Contact</a>
                     </li>
-                </ul>
+                    <li>
+                        <ul class="nav navbar-nav"></ul>
+                      
+                        <form class="navbar-form navbar-right" role="search">
+                            <div class="form-group">
+                                <input type="text" class="form-control" placeholder="Search"> <span class="glyphicon glyphicon-search"></span>
+                            </div>
+                        </form>
+                        
+                    </li>
             </div>
+            </ul>
         </div>
-        <div class="home-image"></div>
+    </div>
+    <div class="home-image"></div>
     </div>
     <div class="container">
 
