--- a/_code/site/_layout.ejs
+++ b/_code/site/_layout.ejs
@@ -26,7 +26,9 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">CB Logo</a>
+                <a class="navbar-brand" href="index.html">
+                <img class="logo" height="50" alt="image" id="Logo" src="https://fbcdn-sphotos-d-a.akamaihd.net/hphotos-ak-xap1/t1.0-9/61391_832998626725193_778997491212095918_n.jpg">
+                    </a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
@@ -53,13 +55,11 @@
                     </li>
                     <li>
                         <ul class="nav navbar-nav"></ul>
-                      
                         <form class="navbar-form navbar-right" role="search">
                             <div class="form-group">
                                 <input type="text" class="form-control" placeholder="Search"> <span class="glyphicon glyphicon-search"></span>
                             </div>
                         </form>
-                        
                     </li>
             </div>
             </ul>
@@ -72,6 +72,7 @@
         <%-yield %>
 
     </div>
+    <footer>...</footer>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 </body>
