Changed font menu top

--- a/_code/site/_layout.ejs
+++ b/_code/site/_layout.ejs
@@ -27,8 +27,8 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand" href="index.html">
-                <img class="logo" height="50" alt="image" id="Logo" src="https://fbcdn-sphotos-d-a.akamaihd.net/hphotos-ak-xap1/t1.0-9/61391_832998626725193_778997491212095918_n.jpg">
-                    </a>
+                    <img src="images/logo.jpg">
+                </a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
@@ -53,13 +53,6 @@
                     </li>
                     <li><a href="contact.html">Contact</a>
                     </li>
-                    <li>
-                        <ul class="nav navbar-nav"></ul>
-                        <form class="navbar-form navbar-right" role="search">
-                            <div class="form-group">
-                                <input type="text" class="form-control" placeholder="Search"> <span class="glyphicon glyphicon-search"></span>
-                            </div>
-                        </form>
                     </li>
             </div>
             </ul>
@@ -72,7 +65,19 @@
         <%-yield %>
 
     </div>
-    <footer>...</footer>
+    <div class="footer">
+        <p class="">@ 2014 CB. All rights reserved.</p>
+        <ul class="footer-navbar">
+            <li><a href="index.html">Home</a>
+            </li>
+            <li><a href="portfolio.html">Portfolio</a>
+            </li>
+            <li><a href="about.html">About</a>
+            </li>
+            <li><a href="contact.html">Contact</a>
+            </li>
+        </ul>
+    </div>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 </body>
