--- a/_code/site/styles/styles.css
+++ b/_code/site/styles/styles.css
@@ -2,3 +2,37 @@
 body {
     background-color: white;
 }
+
+.navbar-nav {
+    font-family: 'Source Sans Pro', sans-serif;
+    font-size: 15px;
+    line-height: 20px;
+    font-weight: 700px;
+    text-transform: uppercase;
+    color: #506A85;
+}
+
+.navbar .container {
+    margin-top: 18px;
+}
+
+.navbar-nav {
+    float: none;
+}
+
+.footer {
+    color:#707E8C;
+	width:100%;
+	height:200px;
+	position:absolute;
+	background:#283646;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    left: 0;
+    bottom:0;
+}
+
+.footer-navbar {
+    display: inline-block;
+    color: #707E8C;
+}
