Fixed footer and header with Radu

--- a/_code/site/_layout.ejs
+++ b/_code/site/_layout.ejs
@@ -5,10 +5,11 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap 101 Template</title>
+    <title>Carmen Balaban</title>
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="styles/styles.css">
+    <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700,400italic,700italic" rel="stylesheet">
     <!--[if lt IE 9]>
       <script src="//oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="//oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
@@ -32,26 +33,26 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a href="index.html">Home</a>
+                    <li><a class="nav-link" href="index.html">Home</a>
                     </li>
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Portfolio <span class="caret"></span></a>
+                        <a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown">Portfolio <span class="caret"></span></a>
                         <ul class="dropdown-menu" role="menu">
-                            <li><a href="#">All</a>
+                            <li><a class="nav-link" href="#">All</a>
                             </li>
-                            <li><a href="#">Branding</a>
+                            <li><a class="nav-link" href="#">Branding</a>
                             </li>
-                            <li><a href="#">Print Design</a>
+                            <li><a class="nav-link" href="#">Print Design</a>
                             </li>
-                            <li><a href="#">Stationery</a>
+                            <li><a class="nav-link" href="#">Stationery</a>
                             </li>
-                            <li><a href="#">Illustration</a>
+                            <li><a class="nav-link" href="#">Illustration</a>
                             </li>
                         </ul>
                     </li>
-                    <li><a href="about.html">About</a>
+                    <li><a class="nav-link" href="about.html">About</a>
                     </li>
-                    <li><a href="contact.html">Contact</a>
+                    <li><a class="nav-link" href="contact.html">Contact</a>
                     </li>
                     </li>
             </div>
@@ -66,17 +67,19 @@
 
     </div>
     <div class="footer">
-        <p class="">@ 2014 CB. All rights reserved.</p>
-        <ul class="footer-navbar">
-            <li><a href="index.html">Home</a>
-            </li>
-            <li><a href="portfolio.html">Portfolio</a>
-            </li>
-            <li><a href="about.html">About</a>
-            </li>
-            <li><a href="contact.html">Contact</a>
-            </li>
-        </ul>
+        <div class="container">
+            <p class="pull-left">@ 2014 CB. All rights reserved.</p>
+            <ul class="footer-navbar pull-right">
+                <li><a href="index.html">Home</a>
+                </li>
+                <li><a href="portfolio.html">Portfolio</a>
+                </li>
+                <li><a href="about.html">About</a>
+                </li>
+                <li><a href="contact.html">Contact</a>
+                </li>
+            </ul>
+        </div>
     </div>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
