--- a/_code/site/styles/styles.css
+++ b/_code/site/styles/styles.css
@@ -3,21 +3,22 @@ body {
     background-color: white;
 }
 
-.navbar-nav {
+.navbar li > a.nav-link {
     font-family: 'Source Sans Pro', sans-serif;
     font-size: 15px;
-    line-height: 20px;
-    font-weight: 700px;
+    font-weight: 700;
     text-transform: uppercase;
     color: #506A85;
 }
 
-.navbar .container {
-    margin-top: 18px;
+.navbar li > a:hover.nav-link {
+    color:#1ABB9C;
 }
 
 .navbar-nav {
     float: none;
+    height: 80px;
+    padding-top: 18px;
 }
 
 .footer {
@@ -35,4 +36,27 @@ body {
 .footer-navbar {
     display: inline-block;
     color: #707E8C;
+}
+.footer-navbar li {
+    display: inline-block;
+    margin-left: 10px;
+}
+
+.footer-navbar li:before {
+    display: inline-block;
+    content: "·";
+    padding-right: 12px;
+}
+
+.footer-navbar li:first-child:before {
+    display: none;
+}
+
+.footer-navbar a {
+    color:#707E8C;
+}
+
+.footer-navbar a:hover {
+    color:#1ABB9C;
+    text-decoration: none;
 }
