--- a/_code/site/_layout.ejs
+++ b/_code/site/_layout.ejs
@@ -28,7 +28,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand" href="index.html">
-                    <img src="images/logo.jpg">
+                    <img src="images/logo.png">
                 </a>
             </div>
             <div class="navbar-collapse collapse">
@@ -66,9 +66,24 @@
         <%-yield %>
 
     </div>
+
+<div class="footer-up">
+    <div class="container-up">
+        <div class="row">
+            <div class="col-md-4">
+                <h4>Who we are</h4>
+                <a href="index.html">
+                <img class="logo img" src="images/logowhite.png" alt></a>
+            <p> Magnis modipsae voloratati andigen daepeditem quiate re porem que aut labor. Laceaque eictemperum quiae sitiorem rest non restibusaes maio es dem tumquam.</p></div>
+            <div class="col-md-4">Latest Works</div>
+            <div class="col-md-4">Get in Touch</div>
+            </div>
+        </div>
+    </div>
+
     <div class="footer">
         <div class="container">
-            <p class="pull-left">@ 2014 CB. All rights reserved.</p>
+            <p class="pull-left">@ 2014 Carmen Balaban. All rights reserved.</p>
             <ul class="footer-navbar pull-right">
                 <li><a href="index.html">Home</a>
                 </li>
