Color changed submenu

--- a/_code/site/_layout.ejs
+++ b/_code/site/_layout.ejs
@@ -36,7 +36,7 @@
                     <li><a class="nav-link" href="index.html">Home</a>
                     </li>
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown">Portfolio <span class="caret"></span></a>
+                        <a href="#" class="dropdown-toggle nav-link js-activated" data-toggle="dropdown">Portfolio <span class="caret"></span></a>
                         <ul class="dropdown-menu" role="menu">
                             <li><a class="nav-link" href="#">All</a>
                             </li>
@@ -71,12 +71,23 @@
     <div class="container-up">
         <div class="row">
             <div class="col-md-4">
-                <h4>Who we are</h4>
+                <h4>Who am I</h4>
                 <a href="index.html">
-                <img class="logo img" src="images/logowhite.png" alt></a>
-            <p> Magnis modipsae voloratati andigen daepeditem quiate re porem que aut labor. Laceaque eictemperum quiae sitiorem rest non restibusaes maio es dem tumquam.</p></div>
-            <div class="col-md-4">Latest Works</div>
-            <div class="col-md-4">Get in Touch</div>
+                <img class="whitelogo" src="images/logowhite.png"></a>
+            <p> Magnis modipsae voloratati andigen daepeditem quiate re porem que aut labor. Laceaque eictemperum quiae sitiorem rest non restibusaes maio es dem tumquam.</p>
+            <a href="about.html" class="txt-btn">More about me</a>
+            </div>
+            <div class="col-md-4">
+                <h4>Latest Works</h4></div>
+            <div class="col-md-4">
+                <h4>Get in Touch</h4>
+            <p>This should be the place where you can contact me. It's just as simple as that.</p>
+           <ul class="contacts">
+               <li><i class="glyphicon glyphicon-phone"></i> +40 765 275 808 </li>
+               <a href="#"><i class="glyphicon glyphicon-envelope"></i> carmenbalaban@gmail.com
+                   </a>
+               </ul>
+            </div>
             </div>
         </div>
     </div>
