--- a/_code/site/_layout.ejs
+++ b/_code/site/_layout.ejs
@@ -59,7 +59,7 @@
             </div>
         </div>
     </header>
-    
+
     <main>
         <div class="container page">
 
@@ -69,49 +69,72 @@
     </main>
 
     <footer>
-    <div class="footer-up">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-4">
-                    <h4>Who am I</h4>
-                    <a href="index.html">
-                        <img class="whitelogo" src="images/logowhite.png">
-                    </a>
-                    <p>Magnis modipsae voloratati andigen daepeditem quiate re porem que aut labor. Laceaque eictemperum quiae sitiorem rest non restibusaes maio es dem tumquam.</p>
-                    <a href="about.html" class="txt-btn">More about me</a>
-                </div>
-                <div class="col-md-4">
-                    <h4>Latest Works</h4>
-                </div>
-                <div class="col-md-4">
-                    <h4>Get in Touch</h4>
-                    <p>This should be the place where you can contact me. It's just as simple as that.</p>
-                    <ul class="contacts">
-                        <li><i class="glyphicon glyphicon-phone"></i> +40 765 275 808</li>
-                        <a href="#"><i class="glyphicon glyphicon-envelope"></i> carmenbalaban@gmail.com
+        <div class="footer-up">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-4">
+                        <h4>Who am I</h4>
+                        <a href="index.html">
+                            <img class="whitelogo" src="images/logowhite.png">
+                        </a>
+                        <p>Magnis modipsae voloratati andigen daepeditem quiate re porem que aut labor. Laceaque eictemperum quiae sitiorem rest non restibusaes maio es dem tumquam.</p>
+                        <a href="about.html" class="txt-btn">More about me</a>
+                    </div>
+                    <div class="col-md-4">
+                        <h4>Latest Works</h4>
+                        <div class="row thumbs gap-xs">
+                            <div class="col-xs-6 thumb">
+                                <a href="">
+                                    <img src="images/work 1.jpg">
+                                </a>
+                            </div>
+
+                            <div class="col-xs-6 thumb">
+                                <a href="#">
+                                    <img src="images/work 2.jpg">
+                                </a>
+                            </div>
+                            <div class="col-xs-6 thumb">
+                                <a href="#">
+                                    <img src="images/work 3.jpg">
+                                </a>
+                            </div>
+                            <div class="col-xs-6 thumb">
+                                <a href="#">
+                                    <img src="images/work 4.jpg">
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <h4>Get in Touch</h4>
+                        <p>This should be the place where you can contact me. It's just as simple as that.</p>
+                        <ul class="contacts">
+                            <li><i class="glyphicon glyphicon-phone"></i> +40 765 275 808</li>
+                            <a href="#"><i class="glyphicon glyphicon-envelope"></i> carmenbalaban@gmail.com
                    </a>
-                    </ul>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
 
-    <div class="footer">
-        <div class="container">
-            <p class="pull-left">@ 2014 Carmen Balaban. All rights reserved.</p>
-            <ul class="footer-navbar pull-right">
-                <li><a href="index.html">Home</a>
-                </li>
-                <li><a href="portfolio.html">Portfolio</a>
-                </li>
-                <li><a href="about.html">About</a>
-                </li>
-                <li><a href="contact.html">Contact</a>
-                </li>
-            </ul>
+        <div class="footer">
+            <div class="container">
+                <p class="pull-left">@ 2014 Carmen Balaban. All rights reserved.</p>
+                <ul class="footer-navbar pull-right">
+                    <li><a href="index.html">Home</a>
+                    </li>
+                    <li><a href="portfolio.html">Portfolio</a>
+                    </li>
+                    <li><a href="about.html">About</a>
+                    </li>
+                    <li><a href="contact.html">Contact</a>
+                    </li>
+                </ul>
+            </div>
         </div>
-    </div>
-</footer>
+    </footer>
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
