--- a/_code/site/_layout.ejs
+++ b/_code/site/_layout.ejs
@@ -37,15 +37,15 @@
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle nav-link js-activated" data-toggle="dropdown">Portfolio <span class="caret"></span></a>
                             <ul class="dropdown-menu" role="menu">
-                                <li><a class="nav-link" href="#">All</a>
+                                <li><a class="nav-link" href="/portfolio/">All</a>
                                 </li>
-                                <li><a class="nav-link" href="#">Branding</a>
+                                <li><a class="nav-link" href="/portfolio/branding/">Branding</a>
                                 </li>
-                                <li><a class="nav-link" href="#">Print Design</a>
+                                <li><a class="nav-link" href="/portfolio/print/">Print Design</a>
                                 </li>
-                                <li><a class="nav-link" href="#">Stationery</a>
+                                <li><a class="nav-link" href="/portfolio/stationery/">Stationery</a>
                                 </li>
-                                <li><a class="nav-link" href="#">Illustration</a>
+                                <li><a class="nav-link" href="/portfolio/illustration/">Illustration</a>
                                 </li>
                             </ul>
                         </li>
@@ -125,7 +125,7 @@
                 <ul class="footer-navbar pull-right">
                     <li><a href="index.html">Home</a>
                     </li>
-                    <li><a href="portfolio.html">Portfolio</a>
+                    <li><a href="/portfolio/">Portfolio</a>
                     </li>
                     <li><a href="about.html">About</a>
                     </li>
