--- a/_code/site/index.ejs
+++ b/_code/site/index.ejs
@@ -1,2 +1,8 @@
-<h1>Hello world</h1>
-test
+<div class="row">
+    <div class="col-md-8 center-block text-center">
+        <header>
+            <h1>Beautiful. Clean. Responsive.</h1>
+            <p>This is where you can tell all about the pretty stuff you developed during your last years without looking back. It's just as simple as that. Tada.</p>
+        </header>
+    </div>
+</div>
