--- a/_code/site/_layout.ejs
+++ b/_code/site/_layout.ejs
@@ -28,12 +28,12 @@
                         <span class="icon-bar"></span>
                     </button>
                     <a class="navbar-brand" href="index.html">
-                        <img src="images/logo.png">
+                        <img src="/images/logo.png">
                     </a>
                 </div>
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
-                        <li><a class="nav-link" href="index.html">Home</a>
+                        <li><a class="nav-link" href="/index.html">Home</a>
                         </li>
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle nav-link js-activated" data-toggle="dropdown">Portfolio <span class="caret"></span></a>
@@ -50,9 +50,9 @@
                                 </li>
                             </ul>
                         </li>
-                        <li><a class="nav-link" href="about.html">About</a>
+                        <li><a class="nav-link" href="/about.html">About</a>
                         </li>
-                        <li><a class="nav-link" href="contact.html">Contact</a>
+                        <li><a class="nav-link" href="/contact.html">Contact</a>
                         </li>
                         </li>
                 </div>
@@ -77,34 +77,34 @@
                 <div class="row">
                     <div class="col-md-4">
                         <h4>Who am I</h4>
-                        <a href="index.html">
-                            <img class="whitelogo" src="images/logowhite.png">
+                        <a href="/index.html">
+                            <img class="whitelogo" src="/images/logowhite.png">
                         </a>
                         <p>Magnis modipsae voloratati andigen daepeditem quiate re porem que aut labor. Laceaque eictemperum quiae sitiorem rest non restibusaes maio es dem tumquam.</p>
-                        <a href="about.html" class="txt-btn">More about me</a>
+                        <a href="/about.html" class="txt-btn">More about me</a>
                     </div>
                     <div class="col-md-4">
                         <h4>Latest Works</h4>
                         <div class="row thumbs gap-xs">
                             <div class="col-xs-6 thumb">
-                                <a href="">
-                                    <img src="images/work 1.jpg">
+                                <a href="#">
+                                    <img src="/images/work 1.jpg">
                                 </a>
                             </div>
 
                             <div class="col-xs-6 thumb">
                                 <a href="#">
-                                    <img src="images/work 2.jpg">
+                                    <img src="/images/work 2.jpg">
                                 </a>
                             </div>
                             <div class="col-xs-6 thumb">
                                 <a href="#">
-                                    <img src="images/work 3.jpg">
+                                    <img src="/images/work 3.jpg">
                                 </a>
                             </div>
                             <div class="col-xs-6 thumb">
                                 <a href="#">
-                                    <img src="images/work 4.jpg">
+                                    <img src="/images/work 4.jpg">
                                 </a>
                             </div>
                         </div>
@@ -126,13 +126,13 @@
             <div class="container">
                 <p class="pull-left">@ 2014 Carmen Balaban. All rights reserved.</p>
                 <ul class="footer-navbar pull-right">
-                    <li><a href="index.html">Home</a>
+                    <li><a href="/index.html">Home</a>
                     </li>
                     <li><a href="/portfolio/">Portfolio</a>
                     </li>
-                    <li><a href="about.html">About</a>
+                    <li><a href="/about.html">About</a>
                     </li>
-                    <li><a href="contact.html">Contact</a>
+                    <li><a href="/contact.html">Contact</a>
                     </li>
                 </ul>
             </div>
