--- a/_code/site/styles/styles.css
+++ b/_code/site/styles/styles.css
@@ -2,8 +2,12 @@
 body {
     background-color: white;
     font-family: 'Source Sans Pro', sans-serif;
+    color: #73879C;
 }
 
+main {
+    font-size: 20px;
+}
 a { 
     color: inherit;
 }
@@ -20,6 +24,7 @@ h1 {
     color: #506A85;
     letter-spacing: 0.025em;
     font-family: 'Lato', sans-serif;
+    margin-top: 50px;
 }
 
 h2 {
@@ -48,7 +53,6 @@ a:hover {
 header p {
     font-size: 22px;
     line-height: 150%;
-    color: #73879C;
 }
 
 .navbar li > a.nav-link {
@@ -81,16 +85,12 @@ header p {
    background: #1ABB9C;
 }
 
-dropdown-menu .nav-link {
+.dropdown-menu .nav-link {
     color: #FFF;
 }
 
 .page {
     min-height: 400px;
-}
-
-p {
-color: #73879C;
 }
 
 .footer {
@@ -102,7 +102,6 @@ color: #73879C;
 
 .footer-navbar {
     display: inline-block;
-    color: #73879C;
 }
 
 .footer-navbar li {
@@ -136,6 +135,12 @@ color: #73879C;
     color: white;
     text-transform: uppercase;
     margin-top: 30px;
+}
+
+.footer-up p {
+    color: #A3B1BF;
+    margin-bottom: 15px;
+    font-size: 14px;
 }
 
 .whitelogo {
