--- a/_code/site/contact.ejs
+++ b/_code/site/contact.ejs
@@ -4,26 +4,65 @@
             <h1>Get in touch</h1>
             <p>Do you want to know more? We'd love to hear from you!</p>
         </div>
-        </div>
+    </div>
     <div class="row">
         <div class="col-sm-12">
             <div class="row">
                 <div class="col-sm-6 inner-right-sm">
-                <h2>Leave a Message</h2>
-                    <form id="contactform" class="forms" action="contact"></form>
+                    <h2>Leave a Message</h2>
+                    <form role="form" class="form-group">
+                        <div class="row">
+                            <div class="col-sm-6">
+                                <input type="text" name="name" class="form-control" placeholder="Name (Required)">
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-sm-6">
+                                <input type="email" name="email" class="form-control" placeholder="Email (Required)">
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-sm-6">
+                                <input type="text" name="name" class="form-control" placeholder="Name (Required)">
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-sm-6">
+                                <input type="text" name="name" class="form-control" placeholder="Name (Required)">
+                            </div>
+                        </div>
+
+                    </form>
                 </div>
                 <div class="col-sm-6 inner-left-sm border-left">
                     <h2>Contacts</h2>
                     <p>Magnis modipsae voloratati andigen daepeditem quiate re aut labor. Laceaque eictemperum quiae sitiorem rest non restibusaes.</p>
-                    <h3>CB</h3>
+                    <h3>CARMEN BALABAN</h3>
                     <ul class="contacts">
-                  <li><i class="glyphicon glyphicon-phone"></i> +40 765 275 808</li>
-                            <a href="#"><i class="glyphicon glyphicon-envelope"></i> carmenbalaban@gmail.com
+                        <li><i class="glyphicon glyphicon-phone"></i> +40 765 275 808</li>
+                        <a href="#"><i class="glyphicon glyphicon-envelope"></i> carmenbalaban@gmail.com
                    </a>
                     </ul>
-                </div>
+                    <div class="social-network">
+                        <h3>Social</h3>
+                        <ul class="social">
+                            <li>
+                                <a href="#"><i class="glyphicon glyphicon-facebook"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#"><i class="icon-s-pinterest"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#"><i class="icon-s-behance"></i>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </div>
-    
+        </div>
+
     </div>
-    </div>
+</div>
