--- a/_code/site/contact.ejs
+++ b/_code/site/contact.ejs
@@ -23,21 +23,21 @@
                         </div>
                         <div class="row">
                             <div class="col-sm-6">
-                                <input type="text" name="name" class="form-control" placeholder="Name (Required)">
+                                <input type="text" name="subject" class="form-control" placeholder="Subject">
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col-sm-6">
-                                <input type="text" name="name" class="form-control" placeholder="Name (Required)">
+                            <div class="col-sm-12">
+                                <textarea name="message" class="form-control" placeholder="Enter your message..."></textarea>
                             </div>
                         </div>
-
+                        <button type="submit" class="btn btn-default btn-submit">Submit Message</button>
                     </form>
                 </div>
                 <div class="col-sm-6 inner-left-sm border-left">
                     <h2>Contacts</h2>
                     <p>Magnis modipsae voloratati andigen daepeditem quiate re aut labor. Laceaque eictemperum quiae sitiorem rest non restibusaes.</p>
-                    <h3>CARMEN BALABAN</h3>
+                    <h3>CB</h3>
                     <ul class="contacts">
                         <li><i class="glyphicon glyphicon-phone"></i> +40 765 275 808</li>
                         <a href="#"><i class="glyphicon glyphicon-envelope"></i> carmenbalaban@gmail.com
