Started All page

--- a/_code/site/contact.ejs
+++ b/_code/site/contact.ejs
@@ -13,7 +13,7 @@
                     <form role="form" class="form-group">
                         <div class="row">
                             <div class="col-sm-6">
-                                <input type="text" name="name" class="form-control" placeholder="Name (Required)">
+                                <input type="text" name="name" class="form-control" placeholder="Name (Required)" name="inputBox"/>
                             </div>
                         </div>
                         <div class="row">
