--- a/_code/site/all.ejs
+++ b/_code/site/all.ejs
@@ -1,22 +1,31 @@
- <h1>Portfolio all in one</h1>
-<p>This is where you can see all the iamges from a responsive theme for showcasing your photography, art, web sites, or other projects. It also works nicely as a regular blog site.</p>
-<div class="container inner-bottom">
-<div class="row">
-    <div class="col-sm-12">
-        <ul class="filter text-center">
-            <li>
-            <a href="#" class="active">All</a>
-        </li>
-            <li>
-            <a href="#" class="">Branding</a>
-            </li>
-            <li><a href="#" class="">Print Design</a>
-            </li>
-            <li><a href="#" class="">Stationery</a>
-            </li>
-            <li><a href="#" class="">Illustration</a>
-            </li>
-        </ul>
+<div class="container">
+    <div class="row">
+        <div class="col-md-8 center-block text-center">
+            <h1>Portfolio all in one</h1>
+            <p>This is where you can see all the iamges from a responsive theme for showcasing your photography, art, web sites, or other projects.</p>
         </div>
-     </div>
+    </div>
+</div>
+<div class="container">
+    <div class="row">
+        <div class="col-sm-12">
+            <ul class="filter text-center">
+                <li>
+                    <a href="#" class="active">All</a>
+                </li>
+                <li>
+                    <a href="#" class="">Branding</a>
+                </li>
+                <li>
+                    <a href="#" class="">Print Design</a>
+                </li>
+                <li>
+                    <a href="#" class="">Stationery</a>
+                </li>
+                <li>
+                    <a href="#" class="">Illustration</a>
+                </li>
+            </ul>
+        </div>
+    </div>
 </div>
