ALL images align

--- a/_code/site/all.ejs
+++ b/_code/site/all.ejs
@@ -26,6 +26,43 @@
                     <a href="#" class="">Illustration</a>
                 </li>
             </ul>
+            <ul class="items col-3">
+                <li class="item thumb print-design">
+                    <a href="#">
+                        <figcaption class="text-overlay">
+                            <div class="info">
+                                <h4>Appsscreen Dashboard</h4>
+                                <p>Print Design
+                                </p>
+                            </div>
+                        </figcaption>
+                        <img src="/images/work 5.jpg">
+                    </a>
+                </li>
+                <li class="item thumb branding">
+                    <a href="#">
+                        <figcaption class="text-overlay">
+                            <div class="info">
+                                <h4>Name of the project</h4>
+                                <p>Branding</p>
+                            </div>
+                        </figcaption>
+                        <img src="/images/work 5.jpg">
+                    </a>
+                </li>
+                </li>
+                <li class="item thumb branding">
+                    <a href="#">
+                        <figcaption class="text-overlay">
+                            <div class="info">
+                                <h4>Name of the project</h4>
+                                <p>Branding</p>
+                            </div>
+                        </figcaption>
+                        <img src="/images/work 5.jpg">
+                    </a>
+                </li>
+            </ul>
         </div>
     </div>
 </div>
