--- a/_code/site/_layout.ejs
+++ b/_code/site/_layout.ejs
@@ -64,7 +64,7 @@
     <main>
         <div class="container page">
             <% if (current.path[0]=='portfolio' ) { %>
-                <%- partial( 'portfolio/_all.ejs') %>
+                <%- partial( 'portfolio/_portfolio.ejs') %>
                     <% } else { %>
                         <%-yield %>
                             <% } %>
